Se corrigieron enlaces de imagenes en htmls productos y cuidados. Se creo Readme.md

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -54,7 +54,7 @@
     <section class="container-fluid d-flex" id="main__prod">
         <div class="row w-75 mx-auto my- prod__fila1">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="/multimedia/img/planta1.png" alt="planta" width="200" height="200">
+            <img src="./multimedia/img/planta1.png" alt="planta" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 1 </h3>
@@ -67,7 +67,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila2">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="/multimedia/img/planta2.png" alt="planta" width="200" height="200">
+            <img src="../multimedia/img/planta2.png" alt="planta" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 2 </h3>
@@ -80,7 +80,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila3">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="/multimedia/img/planta1.png" alt="planta" width="200" height="200">
+            <img src="../multimedia/img/planta1.png" alt="planta" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 3 </h3>
@@ -93,7 +93,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila4">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="/multimedia/img/planta2.png" alt="planta" width="200" height="200">
+            <img src="../multimedia/img/planta2.png" alt="planta" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 4 </h3>
