--- a/pages/cuidados.html
+++ b/pages/cuidados.html
@@ -54,7 +54,7 @@
     <section class="grid" id="grid__main">
         <div class="grid__item grid__item1">
             <h4>APRENDE A CUIDAR TUS PRODUCTOS</h4>
-            <video src="/multimedia/mp4/bg.mp4" loop muted autoplay></video>
+            <video src="../multimedia/mp4/bg.mp4" loop muted autoplay></video>
         </div>
         <div class="grid__item grid__item2">
             <h4>DALE VIDA A TU JARDIN</h4>
