Se corrigio enlace de img productos.html

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -54,7 +54,7 @@
     <section class="container-fluid d-flex" id="main__prod">
         <div class="row w-75 mx-auto my- prod__fila1">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="./multimedia/img/planta1.png" alt="planta" width="200" height="200">
+            <img src="../multimedia/img/planta1.png" alt="planta" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 1 </h3>
