--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/productos.html">Productos</a>
+                <a class="nav-link" href="./pages/productos.html">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/cuidados.html">Cuidados</a>
+                <a class="nav-link" href="./pages/cuidados.html">Cuidados</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/pages/about.html">Sobre Nosotros</a>
+                <a class="nav-link" href="./pages/about.html">Sobre Nosotros</a>
               </li>              
             </ul>
             <form class="d-flex" role="search">
