commit para 3era entrega modificacion de htmls imgs y css a sass

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,7 @@
     <title>TERRA GARDEN - VIVEROS </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css"">
+    <link rel="stylesheet" href="../css/estilos.css"">
   </head>
 
   <body>
@@ -56,10 +56,9 @@
             <div class="mapa"> </div>
             <div>
                 <div class="wrapper-local">
-                    <h2>Ubicado en Rosario, Santa fe, Argentina</h2>
-                    <p class="fs-5 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, sunt, similique quibusdam, distinctio aliquid non nobis nulla debitis laudantium tempore ab soluta deserunt voluptatum fugiat molestiae. Quas sapiente ab necessitatibus.
-                    Corrupti, temporibus aspernatur officia, sed quae blanditiis ipsam veritatis porro labore minima iure aliquam quas cupiditate a similique assumenda laborum perferendis, corporis esse qui molestias. Sit cumque numquam et ut?
-                    Quisquam ut reprehenderit expedita in, totam illum maxime perferendis nemo vitae. Magni iusto, tempora id voluptates animi numquam, nisi quo praesentium reprehenderit ullam soluta fuga vel, minima dolores? Tenetur, hic.</p>
+                    <h2>¿QUIENES SOMOS?</h2>
+                    <p class="fs-5 text-white tracking-in-expand-fwd">
+                      Bienvenido a nuestro vivero TERRA GARDEN. Ubicado en Rosario, Santa Fe, Argentina, donde la pasión por las plantas se fusiona con un servicio excepcional. Nos enorgullece ser una empresa familiar, lo que significa que cada planta que cultivamos y cada cliente que atendemos es parte de nuestra extensa familia verde. Ubicados en un entorno privilegiado, ofrecemos un ingreso perfecto hacia un universo de variedad botánica. Desde exuberantes flores hasta robustos árboles, nuestro vivero es un refugio donde la naturaleza y la hospitalidad se entrelazan. Nos esforzamos por brindar no solo productos de calidad, sino también una experiencia en la que cada visita sea más que una transacción: es un encuentro con la vida y la vitalidad que solo la naturaleza puede ofrecer. ¡Únete a nosotros y descubre el encanto de nuestro vivero en el corazón de Rosario!.</p>
                 </div>
             </div>          
         <div class="mt-5 text-center">
