--- a/pages/cuidados.html
+++ b/pages/cuidados.html
@@ -6,7 +6,7 @@
     <title>TERRA GARDEN - VIVEROS </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css"">
+    <link rel="stylesheet" href="../css/estilos.css"">
   </head>
 
   <body>
@@ -58,13 +58,14 @@
         </div>
         <div class="grid__item grid__item2">
             <h4>DALE VIDA A TU JARDIN</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nam error voluptates eos alias sint repudiandae cum sequi ad veniam voluptas incidunt vero optio, natus dicta, non dignissimos perferendis ratione?</p>
+            <p>
+              Cuidar las plantas de tu jardín es una tarea gratificante que no solo embellece tu entorno, sino que también fomenta un equilibrio vital en el ambiente. A medida que te sumerges en el fascinante mundo de la jardinería, descubrirás que cada planta tiene sus propias necesidades y peculiaridades. Desde la elección del lugar adecuado hasta la atención diaria, cada gesto contribuye al florecimiento y salud de tu pequeño oasis verde. Este viaje de cuidado de las plantas no solo te conectará con la naturaleza, sino que también te brindará la oportunidad de apreciar la belleza en cada brote y hoja. Así que, ¡prepárate para cultivar un rincón lleno de vida y color con amor y atención dedicados!</p>
 
         </div>
         <div class="grid__item grid__item3">
             <h4>CONECTA CON LA NATURALEZA</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam odit doloremque repudiandae dolorum vitae consequatur similique sit itaque, iste perferendis? In expedita reprehenderit eum quas consequatur odio! Voluptates, aut earum?
-            Repellendus hic eligendi, veniam consectetur aut unde exercitationem distinctio beatae necessitatibus, vel itaque error, quibusdam commodi? Nisi cum natus reiciendis repudiandae, necessitatibus, dolorem tempora aut at architecto fugiat provident. Ad?</p>
+            <p>
+              Conectar con la naturaleza a través del cuidado de tu jardín va más allá de la estética y la productividad. Este proceso se convierte en un medio enriquecedor para mejorar tu bienestar mental y emocional. La interacción diaria con las plantas, ya sea plantando, podando o simplemente observando su crecimiento, ha demostrado reducir el estrés, mejorar el estado de ánimo y aumentar la sensación de satisfacción. Además, el contacto con la tierra y la contemplación de la diversidad de la vida vegetal te conectan con ciclos naturales, fomentando una apreciación más profunda de la vitalidad y la armonía que la naturaleza aporta a nuestras vidas. En resumen, cuidar tu jardín se traduce no solo en flores vibrantes, sino también en un renovado equilibrio y serenidad en tu propio ser.</p>
         </div>
     </section>
 
