--- a/pages/productos.html
+++ b/pages/productos.html
@@ -6,7 +6,7 @@
     <title>TERRA GARDEN - VIVEROS </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css"">
+    <link rel="stylesheet" href="../css/estilos.css"">
   </head>
 
   <body>
@@ -54,12 +54,13 @@
     <section class="container-fluid d-flex" id="main__prod">
         <div class="row w-75 mx-auto my- prod__fila1">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="../multimedia/img/planta1.png" alt="planta" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta1.png" alt="planta" width="200" height="200">
              </div>
              <div>
-                <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 1 </h3>
-                <p class="px-4 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eaque, nihil nam in doloremque ut modi quae culpa ipsam ipsa est eius aut, dicta, itaque a aliquam laborum iusto distinctio.</p>
-                <p class="px-4 text-white">Precio: $5000</p>
+                <h3 class="fs-5 mt-4 px-4 pb-1 text-white"> HELECHOS </h3>
+                <p class="px-4 text-white">
+                  Los helechos son plantas vasculares sin semillas que pertenecen al grupo de los pteridofitos. Estas fascinantes plantas verdes se caracterizan por sus hojas frondosas, llamadas frondas, que se despliegan en patrones complejos y elegantes. Los helechos han existido durante millones de años y se encuentran en una amplia variedad de hábitats, desde bosques húmedos hasta zonas rocosas. Su ciclo de vida incluye una fase reproductiva mediante esporas, y su capacidad para adaptarse a diferentes condiciones ambientales los convierte en elementos comunes y notables en la flora de todo el mundo.</p>
+                <p class="px-4 text-white text-center">Precio: $5000</p>
              </div> 
              <div class="d-flex flex-column align-items-center">   
                 <button type="button" class="btn btn-success">Comprar</button>
@@ -67,12 +68,13 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila2">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="../multimedia/img/planta2.png" alt="planta" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta2.png" alt="planta" width="200" height="200">
              </div>
              <div>
-                <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 2 </h3>
-                <p class="px-4 text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. At iure facere excepturi assumenda cum sit magnam, nobis corrupti voluptate esse dicta ab odit sequi qui possimus, obcaecati provident ullam autem?</p>
-                <p class="px-4 text-white">$5000</p>
+                <h3 class="fs-5 mt-4 px-4 pb-1 text-white">SUCULENTAS </h3>
+                <p class="px-4 text-white">
+                  Las suculentas son plantas fascinantes y adaptables que han ganado popularidad por su capacidad para almacenar agua en sus hojas, tallos o raíces, permitiéndoles sobrevivir en entornos áridos. Estas plantas vienen en una amplia variedad de formas, tamaños y colores, desde pequeñas rosetas hasta cactus espinosos. Su belleza radica en su capacidad para prosperar con bajos niveles de mantenimiento, lo que las convierte en elecciones ideales para aquellos que buscan agregar un toque de naturaleza a sus espacios interiores o exteriores sin requerir grandes esfuerzos de cuidado.</p>
+                <p class="px-4 text-white text-center">Precio: $5000</p>
              </div>
              <div class="d-flex flex-column align-items-center">   
                 <button type="button" class="btn btn-success">Comprar</button>
@@ -80,12 +82,12 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila3">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="../multimedia/img/planta1.png" alt="planta" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta3.png" alt="planta" width="200" height="200">
              </div>
              <div>
-                <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 3 </h3>
-                <p class="px-4 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eaque, nihil nam in doloremque ut modi quae culpa ipsam ipsa est eius aut, dicta, itaque a aliquam laborum iusto distinctio.</p>
-                <p class="px-4 text-white">$5000</p>
+                <h3 class="fs-5 mt-4 px-4 pb-1 text-white">ARBUSTOS </h3>
+                <p class="px-4 text-white">Los arbustos son plantas leñosas de tamaño mediano que se ramifican desde la base y se caracterizan por tener múltiples tallos. Estos versátiles elementos del paisaje pueden variar en forma y tamaño, desde arbustos compactos y tupidos hasta especies más altas y esparcidas. Los arbustos desempeñan un papel crucial en la jardinería, ya que pueden utilizarse para delimitar espacios, crear setos, proporcionar sombra y embellecer jardines con sus flores y follaje.</p>
+                <p class="px-4 text-white text-center">Precio: $5000</p>
              </div>
              <div class="d-flex flex-column align-items-center">   
                 <button type="button" class="btn btn-success">Comprar</button>
@@ -93,17 +95,18 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila4">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img src="../multimedia/img/planta2.png" alt="planta" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta4.png" alt="planta" width="200" height="200">
              </div>
              <div>
-                <h3 class="fs-5 mt-4 px-4 pb-1 text-white">Planta 4 </h3>
-                <p class="px-4 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eaque, nihil nam in doloremque ut modi quae culpa ipsam ipsa est eius aut, dicta, itaque a aliquam laborum iusto distinctio.</p>
-                <p class="px-4 text-white">$5000</p>
+                <h3 class="fs-5 mt-4 px-4 pb-1 text-white">CACTUS </h3>
+                <p class="px-4 text-white">
+                  Los cactus son plantas suculentas adaptadas a entornos áridos, conocidas por sus formas únicas y su capacidad para almacenar agua en sus tejidos. Estas plantas resistentes, pertenecientes a la familia de las cactáceas, se caracterizan por sus tallos carnosos y espinas, que desempeñan un papel esencial en la conservación de agua y la protección contra depredadores. Los cactus se encuentran en una amplia variedad de tamaños y formas, desde pequeñas esferas hasta gigantes columnares. Su belleza peculiar y su capacidad para prosperar en condiciones difíciles hacen de los cactus opciones populares tanto en jardines de rocas como en interiores, aportando un toque único y resistente a cualquier espacio</p>
+                <p class="px-4 text-white text-center">Precio: $5000</p>
              </div> 
              <div class="d-flex flex-column align-items-center">   
                 <button type="button" class="btn btn-success">Comprar</button>
              </div> 
-            </div>      
+            </div>   
     </section>
 
      <!--Footer--> 
