--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TERRA GARDEN - VIVEROS </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
   </head>
 
   <body>
@@ -47,8 +47,8 @@
 
     <!--HERO-->
     <section class="w-50 mx-auto text-center pt-3" id="hero">
-        <h1 class=" p-3 fs-2 border-3 text-success">¡Bienvenidos a TERRA GARDEN!</h1>
-        <p class="p-2 fs-4">Te invitamos a que conozcas todos nuestros productos y aprendas a cuidarlos vos mismo.</p>
+        <h1 class=" p-3 fs-2 border-3 text-success roll-in-top">¡Bienvenidos a TERRA GARDEN!</h1>
+        <p class="p-2 fs-4 roll-in-top">Te invitamos a que conozcas todos nuestros productos y aprendas a cuidarlos vos mismo.</p>
     </section>
 
     <!--Carrusel-->
