--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TERRA GARDEN - VIVEROS </title>
+    <title>TERRA GARDEN - CONTACTO </title>
+    <meta name="description" content="Envianos un formulario">
+    <meta name="keywords" content="Vivero, Viveros, Rosario, Plantas, Formulario, Contacto, Cuidados, Productos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilos.css"">
@@ -54,7 +56,7 @@
   <section id="seccion__contacto" class="border-bottom border-3 border-success">
     <div class="container  border-top border-success " style="max-width: 500px" id="contenedor-formulario">
       <div class="text-center mb-4" id="titulo-formulario">
-        <div><img src="../multimedia/img/support.png" alt="" class="img-fluid ps-5"></div>
+        <div><img src="../multimedia/img/support.png" alt="imagen-soporte" class="img-fluid ps-5"></div>
         <h2>Formulario de Contacto</h2>
       </div>          
     <!--FORMULARIO-->
