--- a/pages/cuidados.html
+++ b/pages/cuidados.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TERRA GARDEN - VIVEROS </title>
+    <title>TERRA GARDEN - CUIDADOS </title>
+    <meta name="description" content="Aprende a cuidar tus plantas">
+    <meta name="keywords" content="Vivero, Viveros, Rosario, Plantas, Cactus, Suculentas, Helechos, Arbustos, Cuidados">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilos.css"">
