--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TERRA GARDEN - VIVEROS </title>
+    <title>TERRA GARDEN - PRODUCTOS </title>
+    <meta name="description" content="Revisa nuestro catalogo online">
+    <meta name="keywords" content="Vivero, Viveros, Rosario, Plantas, Cactus, Suculentas, Helechos, Arbustos, Productos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilos.css"">
@@ -54,7 +56,7 @@
     <section class="container-fluid d-flex" id="main__prod">
         <div class="row w-75 mx-auto my- prod__fila1">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img class="puff-in-center" src="../multimedia/img/planta1.png" alt="planta" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta1.png" alt="helechos" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white"> HELECHOS </h3>
@@ -68,7 +70,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila2">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img class="puff-in-center" src="../multimedia/img/planta2.png" alt="planta" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta2.png" alt="suculentas" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">SUCULENTAS </h3>
@@ -82,7 +84,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila3">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img class="puff-in-center" src="../multimedia/img/planta3.png" alt="planta" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta3.png" alt="arbustos" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">ARBUSTOS </h3>
@@ -95,7 +97,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila4">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img class="puff-in-center" src="../multimedia/img/planta4.png" alt="planta" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta4.png" alt="cactus" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">CACTUS </h3>
