Modificacion de alts en imgs y vids de los htmls

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">            
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="./multimedia/img/slide4.jpeg" class="d-block w-75 mx-auto" alt="slide1">
+            <img src="./multimedia/img/slide4.jpeg" class="d-block w-75 mx-auto" alt="slide1 foto de plantas en el interior del vivero">
           </div> 
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./multimedia/img/slide5.jpeg" class="d-block w-75 mx-auto" alt="slide2">
+            <img src="./multimedia/img/slide5.jpeg" class="d-block w-75 mx-auto" alt="slide2 foto de plantas publicadas dentro del vivero">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./multimedia/img/slide6.jpeg" class="d-block w-75 mx-auto" alt="slide3">
+            <img src="./multimedia/img/slide6.jpeg" class="d-block w-75 mx-auto" alt="slide3 foto de plantas con flores en el exterior">
           </div> 
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
