--- a/pages/about.html
+++ b/pages/about.html
@@ -63,7 +63,7 @@
                 </div>
             </div>          
         <div class="mt-5 text-center">
-            <img id="img-mapa" src="../multimedia/img/map.PNG" alt="mapa">
+            <img id="img-mapa" src="../multimedia/img/map.PNG" alt="ubicacion de google maps en imagen">
         </div>    
         </div>
     </section>
