--- a/pages/productos.html
+++ b/pages/productos.html
@@ -56,7 +56,7 @@
     <section class="container-fluid d-flex" id="main__prod">
         <div class="row w-75 mx-auto my- prod__fila1">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img class="puff-in-center" src="../multimedia/img/planta1.png" alt="helechos" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta1.png" alt="planta de helechos" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white"> HELECHOS </h3>
@@ -70,7 +70,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila2">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img class="puff-in-center" src="../multimedia/img/planta2.png" alt="suculentas" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta2.png" alt="planta de suculentas" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">SUCULENTAS </h3>
@@ -84,7 +84,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila3">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img class="puff-in-center" src="../multimedia/img/planta3.png" alt="arbustos" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta3.png" alt="planta de arbustos" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">ARBUSTOS </h3>
@@ -97,7 +97,7 @@
         </div>
         <div class="row w-75 mx-auto my- prod__fila4">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
-            <img class="puff-in-center" src="../multimedia/img/planta4.png" alt="cactus" width="200" height="200">
+            <img class="puff-in-center" src="../multimedia/img/planta4.png" alt="planta de cactus" width="200" height="200">
              </div>
              <div>
                 <h3 class="fs-5 mt-4 px-4 pb-1 text-white">CACTUS </h3>
