agregado de etiqueta semantica main

--- a/pages/cuidados.html
+++ b/pages/cuidados.html
@@ -53,7 +53,8 @@
     </section>
 
     <!--MAIN CUIDADOS-->
-    <section class="grid" id="grid__main">
+    <main>
+      <section class="grid" id="grid__main">
         <div class="grid__item grid__item1">
             <h4>APRENDE A CUIDAR TUS PRODUCTOS</h4>
             <video src="../multimedia/mp4/bg.mp4" loop muted autoplay alt="video sobre cuidado de plantas"></video>
@@ -69,7 +70,8 @@
             <p>
               Conectar con la naturaleza a través del cuidado de tu jardín va más allá de la estética y la productividad. Este proceso se convierte en un medio enriquecedor para mejorar tu bienestar mental y emocional. La interacción diaria con las plantas, ya sea plantando, podando o simplemente observando su crecimiento, ha demostrado reducir el estrés, mejorar el estado de ánimo y aumentar la sensación de satisfacción. Además, el contacto con la tierra y la contemplación de la diversidad de la vida vegetal te conectan con ciclos naturales, fomentando una apreciación más profunda de la vitalidad y la armonía que la naturaleza aporta a nuestras vidas. En resumen, cuidar tu jardín se traduce no solo en flores vibrantes, sino también en un renovado equilibrio y serenidad en tu propio ser.</p>
         </div>
-    </section>
+      </section>
+    </main>
 
      <!--Footer--> 
     <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
