--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,8 @@
     </section>
 
     <!--MAIN CONTACTO-->
-    <section>
+    <main>
+      <section>
         <div id="local" class="border-top border-2 p-4 text-white">
             <div>
                 <div class="wrapper-local">
@@ -66,7 +67,8 @@
             <img id="img-mapa" src="../multimedia/img/map.PNG" alt="ubicacion de google maps en imagen">
         </div>    
         </div>
-    </section>
+      </section>
+    </main>
 
      <!--Footer--> 
     <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
