--- a/pages/productos.html
+++ b/pages/productos.html
@@ -53,7 +53,8 @@
     </section>
 
     <!--MAIN PRODUCTOS-->
-    <section class="container-fluid d-flex" id="main__prod">
+    <main>
+      <section class="container-fluid d-flex" id="main__prod">
         <div class="row w-75 mx-auto my- prod__fila1">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
             <img class="puff-in-center" src="../multimedia/img/planta1.png" alt="planta de helechos" width="200" height="200">
@@ -109,7 +110,8 @@
                 <button type="button" class="btn btn-success">Comprar</button>
              </div> 
             </div>   
-    </section>
+      </section>
+    </main>
 
      <!--Footer--> 
     <footer class="w-100  d-flex  align-items-center justify-content-center flex-wrap">
