correcciones de partials y htmls

--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,7 @@
     <!--MAIN CONTACTO-->
     <main>
       <section>
-        <div id="local" class="border-top border-2 p-4 text-white">
+        <div id="local" style="gap:2rem" class="border-top border-2 p-4 text-white">
             <div>
                 <div class="wrapper-local">
                     <h2>¿QUIENES SOMOS?</h2>
@@ -63,7 +63,7 @@
                       Bienvenido a nuestro vivero TERRA GARDEN. Ubicado en Rosario, Santa Fe, Argentina, donde la pasión por las plantas se fusiona con un servicio excepcional. Nos enorgullece ser una empresa familiar, lo que significa que cada planta que cultivamos y cada cliente que atendemos es parte de nuestra extensa familia verde. Ubicados en un entorno privilegiado, ofrecemos un ingreso perfecto hacia un universo de variedad botánica. Desde exuberantes flores hasta robustos árboles, nuestro vivero es un refugio donde la naturaleza y la hospitalidad se entrelazan. Nos esforzamos por brindar no solo productos de calidad, sino también una experiencia en la que cada visita sea más que una transacción: es un encuentro con la vida y la vitalidad que solo la naturaleza puede ofrecer. ¡Únete a nosotros y descubre el encanto de nuestro vivero en el corazón de Rosario!.</p>
                 </div>
             </div>          
-        <div class="mt-5 text-center">
+        <div class="text-center">
             <img id="img-mapa" src="../multimedia/img/map.PNG" alt="ubicacion de google maps en imagen">
         </div>    
         </div>
