--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,8 @@
     </section>
 
     <!--CONTENEDOR - FORMULARIO-->
-  <section id="seccion__contacto" class="border-bottom border-3 border-success">
+  <main style="background-image: url(../multimedia/img/background.png);">
+    <section id="seccion__contacto" class="border-bottom border-3 p-5 border-success">
     <div class="container  border-top border-success " style="max-width: 500px" id="contenedor-formulario">
       <div class="text-center mb-4" id="titulo-formulario">
         <div><img src="../multimedia/img/support.png" alt="imagen-soporte" class="img-fluid ps-5"></div>
@@ -85,7 +86,8 @@
       </form>
   
   </div>
-</section>
+  </section>
+</main>
 
 
      <!--Footer--> 
