--- a/pages/productos.html
+++ b/pages/productos.html
@@ -54,7 +54,7 @@
 
     <!--MAIN PRODUCTOS-->
     <main>
-      <section class="container-fluid d-flex" id="main__prod">
+      <section class="container-fluid d-flex pb-5" id="main__prod">
         <div class="row w-75 mx-auto my- prod__fila1">
             <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
             <img class="puff-in-center" src="../multimedia/img/planta1.png" alt="planta de helechos" width="200" height="200">
