cambio en partials y html cuidados

--- a/pages/cuidados.html
+++ b/pages/cuidados.html
@@ -57,12 +57,14 @@
       <section class="grid" id="grid__main">
         <div class="grid__item grid__item1">
             <h4>APRENDE A CUIDAR TUS PRODUCTOS</h4>
-            <video src="../multimedia/mp4/bg.mp4" loop muted autoplay alt="video sobre cuidado de plantas"></video>
+            <video src="../multimedia/mp4/bg.mp4" loop muted autoplay alt="video sobre cuidado de plantas" style="max-width: 100%;"></video>
+            <p> Cuidar las plantas de tu jardín es una tarea gratificante que no solo embellece tu entorno, sino que también fomenta un equilibrio vital en el ambiente. A medida que te sumerges en el fascinante mundo de la jardinería, descubrirás que cada planta tiene sus propias necesidades y peculiaridades. Desde la elección del lugar adecuado hasta la atención diaria, cada gesto contribuye al florecimiento y salud de tu pequeño oasis verde. Este viaje de cuidado de las plantas no solo te conectará con la naturaleza, sino que también te brindará la oportunidad de apreciar la belleza en cada brote y hoja. Así que, ¡prepárate para cultivar un rincón lleno de vida y color con amor y atención dedicados!</p>
         </div>
         <div class="grid__item grid__item2">
             <h4>DALE VIDA A TU JARDIN</h4>
             <p>
-              Cuidar las plantas de tu jardín es una tarea gratificante que no solo embellece tu entorno, sino que también fomenta un equilibrio vital en el ambiente. A medida que te sumerges en el fascinante mundo de la jardinería, descubrirás que cada planta tiene sus propias necesidades y peculiaridades. Desde la elección del lugar adecuado hasta la atención diaria, cada gesto contribuye al florecimiento y salud de tu pequeño oasis verde. Este viaje de cuidado de las plantas no solo te conectará con la naturaleza, sino que también te brindará la oportunidad de apreciar la belleza en cada brote y hoja. Así que, ¡prepárate para cultivar un rincón lleno de vida y color con amor y atención dedicados!</p>
+              
+Cultivar y dar vida a tu jardín no solo embellece tu hogar, sino que también aporta beneficios significativos. Un jardín bien cuidado crea un refugio para la biodiversidad, fomentando la presencia de insectos beneficiosos y aves. Además, interactuar con la naturaleza en tu propio espacio verde actúa como una terapia, reduciendo el estrés y fortaleciendo tu conexión con el entorno. Asimismo, la posibilidad de cultivar alimentos frescos en tu jardín no solo promueve un estilo de vida saludable, sino que también contribuye a la sostenibilidad alimentaria y ambiental.</p>
 
         </div>
         <div class="grid__item grid__item3">
