Correccion error en img de productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -56,7 +56,7 @@
     <main>
       <section class="container-fluid d-flex pb-5" id="main__prod">
         <div class="row w-75 mx-auto my- prod__fila1">
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
+            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap" style="width: 100%">
             <img class="puff-in-center" src="../multimedia/img/planta1.png" alt="planta de helechos" width="200" height="200">
              </div>
              <div>
@@ -70,7 +70,7 @@
              </div>              
         </div>
         <div class="row w-75 mx-auto my- prod__fila2">
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
+            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap" style="width: 100%">
             <img class="puff-in-center" src="../multimedia/img/planta2.png" alt="planta de suculentas" width="200" height="200">
              </div>
              <div>
@@ -84,7 +84,7 @@
              </div> 
         </div>
         <div class="row w-75 mx-auto my- prod__fila3">
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
+            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap" style="width: 100%">
             <img class="puff-in-center" src="../multimedia/img/planta3.png" alt="planta de arbustos" width="200" height="200">
              </div>
              <div>
@@ -97,7 +97,7 @@
              </div>               
         </div>
         <div class="row w-75 mx-auto my- prod__fila4">
-            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap">
+            <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center my-5 icono-wrap" style="width: 100%">
             <img class="puff-in-center" src="../multimedia/img/planta4.png" alt="planta de cactus" width="200" height="200">
              </div>
              <div>
